# AED-proj1-FEUP

PROJ_1_AED_V2/: CMakeLists.txt  Estudante.cpp  Estudante.h  Gestor.cpp  Gestor.h  GestorAulas.cpp  GestorEstudante.cpp  HorarioUC.cpp  HorarioUC.h  LerAulas.cpp  LerEstudantes.cpp  Pedido.cpp  Pedido.h  Slot.cpp  Slot.h  UCTurma.cpp  UCTurma.h  menu  menu.cpp
